compiler/testData/diagnostics/tests/controlFlowAnalysis/propertiesOrderInPackage.kt
package a

konst a : Int = <!UNINITIALIZED_VARIABLE!>b<!>
konst b : Int = a